--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "start": "vite"
+    "dev": "vite",
+    "start": "serve dist -s -n -L -p $PORT"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.19",
@@ -20,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3",
+    "serve": "^14.2.3",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
