modificacion archivo .env

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-VITE_BASE_URL: "ecommerce-back-production-df8e.up.railway.app"
+VITE_BASE_URL: "https://ecommerce-back-production-df8e.up.railway.app/api/products"
